# pkgrank

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: ci.yml
analyzers/depgraph/: depgraph.go
analyzers/modver/: modver.go
cmd/: root.go
cmd/depgraph/: main.go
cmd/modver/: main.go
examples/: mcp_smoke.rs
graph/: graph.go  graph_test.go  tool.go
rust/: Cargo.toml
rust/src/: main.rs
shared/: logger.go
src/: centrality.rs  main.rs
tests/: cli_contract.rs  e2e_real_targets.rs  triage_cli.rs
