[package]
name = "pkgrank"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/pkgrank"
homepage = "https://github.com/arclabs561/pkgrank"
publish = false

description = "Cargo dependency graph centrality analysis (workspace tool)"

[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "pkgrank"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23.1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
petgraph = "0.6"
walk = { git = "https://github.com/arclabs561/walk", rev = "63aba8acbaab64b21b2df2059db486d01d8c5a4e", features = ["petgraph"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }
tokio = { version = "1.40", features = ["full"], optional = true }
rmcp = { version = "0.12.0", optional = true, features = ["macros", "server", "client", "transport-io", "transport-child-process", "schemars"] }
schemars = { version = "1.2.0", optional = true, features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[features]
# Default should "just work" when run as a Cursor MCP server.
default = ["stdio"]
stdio = ["dep:tokio", "dep:rmcp", "dep:schemars"]
# Expose extra/debug MCP tools (wider tool surface).
mcp-debug = []
